test/fails/bad_functions/attributes3.lgl
void main(uniform vec2 x, int y) { // Must include attributes in main
    return;
}